feat(day02): add solution for day 02 part 2